--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -4,10 +4,10 @@
 
 .row
   .span8.offset2
-    %h3 Hey look! It's Zach's
+    %h3 Data Axle
     .spacer2
     %h1.wordmark
-      Foosball Tracker!
+      FoosChamp: Foosball Tracker!
         
     .section
       It's pretty much the best way to keep track of who's the best
