--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     
     %link{:rel => "shortcut icon", :href => asset_path('favicon.ico')}/
     
-    %title #{yield :title} - Foosball Tracker
+    %title #{yield :title} - FoosChamp
     
   %body
     = render 'header'
