added search test

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Arvo:400,700|Lemon'
     
     %link{:rel => "shortcut icon", :href => asset_path('favicon.ico')}/
+    %link{:rel => "search", :type => "application/opensearchdescription+xml", :href => "/test.xml", :title => "OpenSearch (English)"}/
     
     %title #{yield :title} - FoosChamp
     
